edit product impl & test