@@ -3,10 +3,14 @@ package com.drtx.ecomerce.amazon.adapters.in.rest.product;
 import com.drtx.ecomerce.amazon.adapters.in.rest.product.dto.ProductRequest;
 import com.drtx.ecomerce.amazon.adapters.in.rest.product.dto.ProductResponse;
 import com.drtx.ecomerce.amazon.adapters.in.rest.product.mappers.ProductRestMapper;
+import com.drtx.ecomerce.amazon.application.usecases.product.UploadProductImageUseCase;
 import com.drtx.ecomerce.amazon.core.model.product.Category;
 import com.drtx.ecomerce.amazon.core.model.product.Product;
+import com.drtx.ecomerce.amazon.core.model.product.ProductStatus;
 import com.drtx.ecomerce.amazon.core.ports.in.rest.ProductUseCasePort;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -18,9 +22,11 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -40,7 +46,7 @@ class ProductControllerTest {
     private ProductUseCasePort productUseCasePort;
 
     @Mock
-    private com.drtx.ecomerce.amazon.application.usecases.product.UploadProductImageUseCase uploadImageUseCase;
+    private UploadProductImageUseCase uploadImageUseCase;
 
     @Mock
     private ProductRestMapper productMapper;
@@ -50,11 +56,21 @@ class ProductControllerTest {
     private ProductResponse testProductResponse;
     private Category testCategory;
 
+    private UUID productUuid;
+
+    private static final String BASE_URL = "/products";
+
+    private static final LocalDateTime NOW = LocalDateTime.of(2026, 1, 1, 12, 0);
+
+
+
     @BeforeEach
     void setUp() {
         ProductController controller = new ProductController(productUseCasePort, uploadImageUseCase, productMapper);
         mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
-        objectMapper = new ObjectMapper();
+        objectMapper = JsonMapper.builder()
+                .addModule(new JavaTimeModule())
+                .build();
 
         testCategory = new Category();
         testCategory.setId(1L);
@@ -63,12 +79,14 @@ class ProductControllerTest {
 
         testProduct = new Product();
         testProduct.setId(1L);
+        productUuid = UUID.randomUUID();
+        testProduct.setUuid(productUuid);
         testProduct.setName("Laptop");
         testProduct.setDescription("High-performance laptop");
         testProduct.setPrice(new BigDecimal("999.99"));
         testProduct.setCategory(testCategory);
         testProduct.setAverageRating(new BigDecimal("4.5"));
-        testProduct.setImages(Arrays.asList("image1.jpg", "image2.jpg"));
+        testProduct.setImages(List.of("image1.jpg", "image2.jpg"));
 
         testProductRequest = new ProductRequest(
                 "Laptop",
@@ -92,10 +110,10 @@ class ProductControllerTest {
                 Arrays.asList("image1.jpg", "image2.jpg"),
                 "LAPTOP-001",
                 100,
-                com.drtx.ecomerce.amazon.core.model.product.ProductStatus.ACTIVE,
+                ProductStatus.ACTIVE,
                 "laptop-high-performance",
-                java.time.LocalDateTime.now(),
-                java.time.LocalDateTime.now());
+                NOW,
+                NOW);
     }
 
     @Test
@@ -107,11 +125,11 @@ class ProductControllerTest {
         when(productMapper.toResponse(any(Product.class))).thenReturn(testProductResponse);
 
         // When & Then
-        mockMvc.perform(get("/products")
+        mockMvc.perform(get(BASE_URL)
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(1)))
+                .andExpect(jsonPath("$[0].uuid", is(productUuid.toString())))
                 .andExpect(jsonPath("$[0].name", is("Laptop")))
                 .andExpect(jsonPath("$[0].price", is(999.99)));
 
@@ -127,11 +145,11 @@ class ProductControllerTest {
         when(productMapper.toResponse(testProduct)).thenReturn(testProductResponse);
 
         // When & Then
-        mockMvc.perform(post("/products")
+        mockMvc.perform(post(BASE_URL)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testProductRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)))
+                .andExpect(jsonPath("$.uuid", is(productUuid.toString())))
                 .andExpect(jsonPath("$.name", is("Laptop")))
                 .andExpect(jsonPath("$.price", is(999.99)));
 
@@ -139,68 +157,82 @@ class ProductControllerTest {
     }
 
     @Test
-    @DisplayName("GET /products/{id} - Should return product when found")
-    void testGetProductById_Found() throws Exception {
-        // Given
-        when(productUseCasePort.getProductById(1L)).thenReturn(Optional.of(testProduct));
-        when(productMapper.toResponse(testProduct)).thenReturn(testProductResponse);
+    @DisplayName("POST /products - Should return 400 for invalid request")
+    void testCreateProduct_InvalidRequest() throws Exception {
+        ProductRequest invalidRequest = new ProductRequest(
+                null, null, 0D, 0, 0D,
+                List.of(), null, 0, null, null
+        );
 
-        // When & Then
-        mockMvc.perform(get("/products/{id}", 1L)
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.name", is("Laptop")))
-                .andExpect(jsonPath("$.price", is(999.99)));
-
-        verify(productUseCasePort, times(1)).getProductById(1L);
+        mockMvc.perform(post("/products")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(invalidRequest)))
+                .andExpect(status().isBadRequest());
     }
 
     @Test
-    @DisplayName("GET /products/{id} - Should return 404 when product not found")
-    void testGetProductById_NotFound() throws Exception {
+    @DisplayName("GET /products/{uuid} - Should return product when found")
+    void testGetProductById_Found() throws Exception {
         // Given
-        when(productUseCasePort.getProductById(999L)).thenReturn(Optional.empty());
+        when(productUseCasePort.getProductByUuid(productUuid)).thenReturn(Optional.of(testProduct));
+        when(productMapper.toResponse(testProduct)).thenReturn(testProductResponse);
 
         // When & Then
-        mockMvc.perform(get("/products/{id}", 999L)
+        mockMvc.perform(get(BASE_URL+"/{uuid}", productUuid.toString())
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.uuid", is(productUuid.toString())))
+                .andExpect(jsonPath("$.name", is("Laptop")))
+                .andExpect(jsonPath("$.price", is(999.99)));
+
+        verify(productUseCasePort, times(1)).getProductByUuid(productUuid);
+    }
+
+    @Test
+    @DisplayName("GET /products/{uuid} - Should return 404 when product not found")
+    void testGetProductById_NotFound() throws Exception {
+        // Given
+        when(productUseCasePort.getProductByUuid(productUuid)).thenReturn(Optional.empty());
+
+        // When & Then
+        mockMvc.perform(get(BASE_URL+"/{uuid}", productUuid.toString())
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
 
-        verify(productUseCasePort, times(1)).getProductById(999L);
+        verify(productUseCasePort, times(1)).getProductByUuid(productUuid);
     }
 
     @Test
-    @DisplayName("PUT /products/{id} - Should update product")
+    @DisplayName("PUT /products/{uuid} - Should update product")
     void testUpdateProduct() throws Exception {
         // Given
         when(productMapper.toDomain(any(ProductRequest.class))).thenReturn(testProduct);
-        when(productUseCasePort.updateProduct(eq(1L), any(Product.class))).thenReturn(testProduct);
+        when(productUseCasePort.updateProduct(eq(productUuid), any(Product.class))).thenReturn(testProduct);
         when(productMapper.toResponse(testProduct)).thenReturn(testProductResponse);
 
         // When & Then
-        mockMvc.perform(put("/products/{id}", 1L)
+        mockMvc.perform(put(BASE_URL+"/{uuid}", productUuid.toString())
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testProductRequest)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)))
+                .andExpect(jsonPath("$.uuid", is(productUuid.toString())))
                 .andExpect(jsonPath("$.name", is("Laptop")))
                 .andExpect(jsonPath("$.price", is(999.99)));
 
-        verify(productUseCasePort, times(1)).updateProduct(eq(1L), any(Product.class));
+        verify(productUseCasePort, times(1)).updateProduct(eq(productUuid), any(Product.class));
     }
 
     @Test
-    @DisplayName("DELETE /products/{id} - Should delete product")
+    @DisplayName("DELETE /products/{uuid} - Should delete product")
     void testDeleteProduct() throws Exception {
         // Given
-        doNothing().when(productUseCasePort).deleteProduct(1L);
+        doNothing().when(productUseCasePort).deleteProductByUuid(productUuid);
 
         // When & Then
-        mockMvc.perform(delete("/products/{id}", 1L)
+        mockMvc.perform(delete(BASE_URL+"/{uuid}", productUuid.toString())
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNoContent());
 
-        verify(productUseCasePort, times(1)).deleteProduct(1L);
+        verify(productUseCasePort, times(1)).deleteProductByUuid(productUuid);
     }
 }
